adj PlayerInfo mobile styling to fix background flicker issue

--- a/src/components/PlayerInfo/PlayerInfo.css
+++ b/src/components/PlayerInfo/PlayerInfo.css
@@ -156,6 +156,7 @@
 }
 
 @media screen and (max-width: 500px) {
+	.PlayerInfo,
 	.showModal {
 		max-height: 85vh;
 		min-height: 85vh;
